<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_box"
        android:layout_above="@+id/main_activity_ready_button"
        tools:context="workprog.clix.workprog.MainActivity">

        <workprog.clix.workprog.CustomNumberEdit
            android:id="@+id/cv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cm_labelvalue="@string/body_mass" />

        <workprog.clix.workprog.CustomNumberEdit
            android:id="@+id/cv_fat_ratio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cm_labelvalue="@string/body_fat"/>

        <workprog.clix.workprog.CustomNumberEdit
            android:id="@+id/cv_water_ratio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cm_labelvalue="@string/body_water" />

        <workprog.clix.workprog.CustomNumberEdit
            android:id="@+id/cv_muscle_ratio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cm_labelvalue="@string/body_muscles"/>

        <workprog.clix.workprog.CustomNumberEdit
            android:id="@+id/cv_bone_ratio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cm_labelvalue="@string/bone_mass"/>

        <workprog.clix.workprog.CustomNumberEdit
            android:id="@+id/cv_kilocalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cm_labelvalue="@string/kilocalories"/>

    </LinearLayout>

    <Button
        android:id="@+id/main_activity_ready_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/rounded_box_lime"
        android:text="@string/save_measurement"
        android:textColor="@color/white" />

</RelativeLayout>
