<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/rounded_box"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <workprog.clix.workprog.CustomDataView
            android:id="@+id/tvBodyMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cmLabelText="@string/body_mass"
            />

        <workprog.clix.workprog.CustomDataView
            android:id="@+id/tvBodyFat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cmLabelText="@string/body_fat"
            />

        <workprog.clix.workprog.CustomDataView
            android:id="@+id/tvBodyWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cmLabelText="@string/body_water"
            />

        <workprog.clix.workprog.CustomDataView
            android:id="@+id/tvBodyMuscles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cmLabelText="@string/body_muscles"
            />

        <workprog.clix.workprog.CustomDataView
            android:id="@+id/tvBoneMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cmLabelText="@string/bone_mass"
            />

        <workprog.clix.workprog.CustomDataView
            android:id="@+id/tvKilocalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cmLabelText="@string/kilocalories"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="17dp"
        android:text="@string/current_date"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvDate"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/rounded_box_red"
        android:text="Remove"
        android:textColor="@color/white" />

</RelativeLayout>